Revised some changes

--- a/mailTemplates/forget-password.html
+++ b/mailTemplates/forget-password.html
@@ -1,6 +1,9 @@
 <div>
   <h1>Hello {{name}},</h1>
-  <p>Please update your password here by clicking this link: {{link}}</p>
+  <p>
+    Please update your password here by clicking this link:
+    <a href="{{link}}">{{link}}</a>
+  </p>
   <p>Best regard</p>
   <p>{{client}}</p>
 </div>
